--- a/public/templates/myCommitments.html
+++ b/public/templates/myCommitments.html
@@ -1,5 +1,25 @@
 <div class='container'>
 	<h2 class='text-orange'>Rechnungen</h2>
+
+	<div class='container col-sm-9'>
+	<div class='panel panel-default' ng-show='iSvc.isAuthorized("admin")'>
+	<div class='panel-heading'>Filter</div>
+	<div class='panel-body'>
+		<div class='row'>
+			<div class='col-sm-9 input-group'>
+				<div class='col-sm-5'>
+				<select id='eventFilter' class='form-control' ng-model='eventIdFilter'>
+					<option ng-repeat='event in events' value='{{event._id}}'>{{event.name}}</option>
+				</select>
+			</div>
+			<div class='col-sm-3'>
+				<button type='button' class='btn btn-primary btn-block' ng-click='loadCommitmentsByEvent()'>Laden</button>
+			</div>
+		</div>
+		</div>
+	</div>
+	</div>
+
 	<div cg-Busy='{promise:busyPromise,message:"Loading",backdrop:true,minDuration:500}'></div>
   <table class='table table-bordered'>
 		<thead>
