event isInternal flag UI

--- a/public/templates/eventEdit.html
+++ b/public/templates/eventEdit.html
@@ -105,6 +105,15 @@
 			<textarea name='info' type='text' ng-model='info' required class='form-control' rows='3'></textarea>
 		</div>
 	</div>
+	<!-- ISINTERNAL -->
+	<div class='form-group'>
+		<label class='control-label col-sm-2'>JD intern</label>
+		<div class='col-sm-10'>
+			<p class='input-group'>
+				<label class='checkbox-inline'><input type='checkbox' ng-model='isInternal' /></label>
+			</p>
+		</div
+	</div>
 
 	<div class='col-sm-offset-2 col-sm-10'>
 		<input class='btn btn-success bnt-lg btn-block' type='submit' value='Speichern' ng-disabled='eventForm.$invalid'>
