seq. number for commitments

--- a/public/templates/commitmentEdit.html
+++ b/public/templates/commitmentEdit.html
@@ -33,7 +33,7 @@
 		<p class='input-group'>
 			<select name='type' class='sel-base form-control' ng-model='type' required>
 				<option value='business'>Sachkosten</option>
-				<option value='food'>Essen</option>
+				<option value='food'>Verpflegung/Essen</option>
 			</select>
 		</p>
 		</div>
