--- a/public/templates/myCommitments.html
+++ b/public/templates/myCommitments.html
@@ -26,8 +26,9 @@
 			<tr>
 				<th></th>
 	      <th></th>
+				<th>Nummer</th>
 				<th>Name</th>
-				<th>Begründung</th>
+				<th>Beschreibung</th>
 				<th>Datum</th>
 				<th>Betrag</th>
 				<th>Bezahlt</th>
@@ -39,7 +40,7 @@
 		</thead>
 		<tbody ng-repeat='grp in commitments'>
 			<tr>
-				<th colspan="4" class="bg-warning"><i><strong>{{getEventName(grp)}}</strong></i></th>
+				<th colspan="5" class="bg-warning"><i><strong>{{getEventName(grp)}}</strong></i></th>
         <th class="bg-warning"><strong>Gesamtbudget:</strong></th>
 				<th align="right" class="bg-primary" style="text-align: right;"><strong>{{calcBudgetSum(grp)*1}}</strong></th>
 				<th colspan="5" class="bg-warning"></th>
@@ -47,17 +48,18 @@
 			<!-- HEAD BUSINESS -->
 			<tr>
 				<td colspan="2"><button class="btn btn-default glyphicon glyphicon-resize-full" ng-click="toggleVisibility(grp['business'])"></button></td>
-				<td colspan="2" class="bg-warning"><i><strong>Sachkosten</strong></i></td>
+				<td colspan="3" class="bg-warning"><i><strong>Sachkosten</strong></i></td>
         <td class="bg-warning"><strong>Budget:</strong></td>
 				<td align="right" class="bg-primary"><strong>{{grp['business'][0].eventId.budgetBusiness}}</strong></td>
 				<td class="bg-warning" colspan="2"><strong>Restbetrag:</strong></td>
-				<td align="right" class="bg-warning"><strong>{{fomratDec(grp['business'][0].eventId.budgetBusiness - sumGrpAll(grp["business"]))}}</strong></td>
+				<td align="right" class="bg-warning"><strong>{{formatDec(grp['business'][0].eventId.budgetBusiness - sumGrpAll(grp["business"]))}}</strong></td>
 				<td colspan="2" class="bg-warning"></td>
 			</tr>
 			<!-- MAIN BUSINESS -->
 			<tr ng-repeat='com in grp["business"]' ng-class='{"tbl_hide": com.isHidden, "tbl_show": !com.isHidden}'>
 				<td><button class="btn glyphicon glyphicon-pencil" ng-disabled='!iSvc.isAuthorized("fadmin")' type="button" ng-click='editCommitment(com._id)'></button></td>
   			<td><button type="button" class="btn glyphicon glyphicon-trash" ng-disabled='!iSvc.isAuthorized("admin")' ng-click='deleteCommitment(com._id)'></button></td>
+				<td>{{com.index}}</td>
 				<td>{{com.name}}</td>
 			  <td>{{com.description}}</td>
 			  <td>{{com.date | date: 'dd/MM/yyyy'}}</td>
@@ -65,13 +67,13 @@
         <td align="center" ng-class='{"bg-info": com.isPaymentDone}'>{{formatBool(com.isPaymentDone)}}</td>
         <td align="center" ng-class='{"bg-info": com.isPaymentJDDone}'>{{formatBool(com.isPaymentJDDone)}}</td>
         <td align="center" ng-class='{"bg-info": com.isInvoice}'>{{formatBool(com.isInvoice)}}</td>
-				<td>{{com.userId.firstName}} {{com.userId.lastName}}</td>
+				<td>{{com.userId.lastName}}</td>
 				<td align="center" ng-class='{"bg-success": com.isCleared, "bg-danger": !com.isCleared}'>{{formatBool(com.isCleared)}}</td>
 			</tr>
 			<!-- FOOTER BUSINESS -->
 			<tr>
 				<td colspan="2"></td>
-				<td colspan="3"><strong>Summe:</strong></td>
+				<td colspan="4"><strong>Summe:</strong></td>
 				<td align="right" ng-class='{"bg-success": !isOverBudget(grp["business"], "business"), "bg-danger": isOverBudget(grp["business"], "business")}'><strong>{{sumGrpAll(grp["business"])}}</strong></td>
 				<td align="right"><strong>{{sumGrpIsPaymentDone(grp["business"])}}</strong></td>
         <td align="right"><strong>{{sumGrpIsPaymentJDDone(grp["business"])}}</strong></td>
@@ -81,8 +83,8 @@
 			<!-- HEADER FOOD -->
 			<tr>
 				<td colspan="2"><button class="btn btn-default glyphicon glyphicon-resize-full" ng-click="toggleVisibility(grp['food'])"></button></td>
-				<td colspan="2" class="bg-warning"><i><strong>Essenskosten</strong></i></td>
-        <td class="bg-warning"><strong>Budget:</strong></td>
+				<td colspan="3" class="bg-warning"><i><strong>Essenskosten</strong></i></td>
+        <td class="bg3warning"><strong>Budget:</strong></td>
 				<td align="right" class="bg-primary"><strong>{{grp['food'][0].eventId.budgetFood}}</strong></td>
 				<td class="bg-warning" colspan="2"><strong>Restbetrag:</strong></td>
 				<td align="right" class="bg-warning"><strong>{{formatDec(grp['food'][0].eventId.budgetFood - sumGrpAll(grp["food"]))}}</strong></td>
@@ -92,6 +94,7 @@
 			<tr ng-repeat='com in grp["food"]' ng-class='{"tbl_hide": com.isHidden, "tbl_show": !com.isHidden}'>
 				<td><button class="btn glyphicon glyphicon-pencil" ng-disabled='!iSvc.isAuthorized("fadmin")' type="button" ng-click='editCommitment(com._id)'></button></td>
   			<td><button type="button" class="btn glyphicon glyphicon-trash" ng-disabled='!iSvc.isAuthorized("admin")' ng-click='deleteCommitment(com._id)'></button></td>
+				<td>{{com.index}}</td>
 				<td>{{com.name}}</td>
 			  <td>{{com.description}}</td>
 			  <td>{{com.date | date: 'dd/MM/yyyy'}}</td>
@@ -99,13 +102,13 @@
         <td align="center" ng-class='{"bg-info": com.isPaymentDone}'>{{formatBool(com.isPaymentDone)}}</td>
         <td align="center" ng-class='{"bg-info": com.isPaymentJDDone}'>{{formatBool(com.isPaymentJDDone)}}</td>
         <td align="center" ng-class='{"bg-info": com.isInvoice}'>{{formatBool(com.isInvoice)}}</td>
-				<td>{{com.userId.firstName}} {{com.userId.lastName}}</td>
+				<td>{{com.userId.lastName}}</td>
 				<td align="center" ng-class='{"bg-success": com.isCleared, "bg-danger": !com.isCleared}'>{{formatBool(com.isCleared)}}</td>
 			</tr>
       <!-- FOOTER FOOD -->
 			<tr>
 				<td colspan="2"></td>
-				<td colspan="3"><strong>Summe:</strong></td>
+				<td colspan="4"><strong>Summe:</strong></td>
 				<td align="right" ng-class='{"bg-success": !isOverBudget(grp["food"], "food"), "bg-danger": isOverBudget(grp["food"], "food")}'><strong>{{sumGrpAll(grp["food"])}}</strong></td>
 				<td align="right"><strong>{{sumGrpIsPaymentDone(grp["food"])}}</strong></td>
         <td align="right"><strong>{{sumGrpIsPaymentJDDone(grp["food"])}}</strong></td>
@@ -115,7 +118,7 @@
       <!-- HEAD TRAVEL -->
 			<tr>
 				<td colspan="2"><button class="btn btn-default glyphicon glyphicon-resize-full" ng-click="toggleVisibility(grp['travel'])"></button></td>
-				<td colspan="2" class="bg-warning"><i><strong>Fahrtkosten</strong></i></td>
+				<td colspan="3" class="bg-warning"><i><strong>Fahrtkosten</strong></i></td>
         <td class="bg-warning"></td>
 				<td align="right" class="bg-primary"></td>
 				<td colspan="5" class="bg-warning"></td>
@@ -124,6 +127,7 @@
 			<tr ng-repeat='com in grp["travel"]' ng-class='{"tbl_hide": com.isHidden, "tbl_show": !com.isHidden}'>
 				<td><button class="btn glyphicon glyphicon-pencil" ng-disabled='!iSvc.isAuthorized("fadmin")' type="button" ng-click='editTravelExpenses(com._id)'></button></td>
   			<td><button type="button" class="btn glyphicon glyphicon-trash" ng-disabled='!iSvc.isAuthorized("admin")' ng-click='deleteCommitment(com._id)'></button></td>
+				<td>{{com.index}}</td>
 				<td>{{com.name}}</td>
 			  <td>{{com.description}}</td>
 			  <td>{{com.date | date: 'dd/MM/yyyy'}}</td>
@@ -131,13 +135,13 @@
         <td align="center"></td>
         <td align="center"></td>
         <td align="center"></td>
-				<td>{{com.userId.firstName}} {{com.userId.lastName}}</td>
+				<td>{{com.userId.lastName}}</td>
 				<td></td>
 			</tr>
 			<!-- FOOTER TRAVEL -->
 			<tr>
 				<td colspan="2"></td>
-				<td colspan="3"><strong>Summe:</strong></td>
+				<td colspan="4"><strong>Summe:</strong></td>
 				<td align="right"><strong>{{sumGrpAll(grp["travel"])}}</strong></td>
 				<td align="right"></td>
         <td align="right"></td>
@@ -145,7 +149,7 @@
 				<td colspan="2"></td>
 			</tr>
       <tr>
-				<td colspan="5"><strong>Summe:</strong></td>
+				<td colspan="6"><strong>Summe:</strong></td>
 				<td align="right"><strong>{{sumGrpTypes(grp)}}</strong></td>
 				<td colspan="5"></td>
 			</tr>
@@ -173,6 +177,8 @@
 					<th>Summe Fahrtkosten</th>
 					<th>Summe Ausgaben</th>
 					<th>Restbetrag</th>
+					<!--<th>Bezahlt offen</th>
+					<th>Rechnungen offen</th>-->
 				</tr>
 			</thead>
 			<tbody>
@@ -186,6 +192,8 @@
 					<td align="right">{{formatDec(summary.sumTravel)}}</td>
 					<td align="right">{{formatDec(summary.sumBusiness + summary.sumFood)}}</td>
 					<td align="right">{{formatDec(summary._id.budgetBusiness + summary._id.budgetFood - summary.sumBusiness - summary.sumFood)}}</td>
+					<!--<td align="right">{{formatDec(summary.sumPaymentOpen)}}</td>
+					<td align="right">{{formatDec(summary.sumInvoiceOpen)}}</td>-->
 				</tr>
 			</tbody>
 			<tfoot>
