--- a/public/templates/travelExpensesEdit.html
+++ b/public/templates/travelExpensesEdit.html
@@ -45,6 +45,15 @@
 		</p>
 		</div>
 	</div>
+	<!-- ISCLEARED -->
+	<div class='form-group'>
+		<label class='control-label col-sm-2'></label>
+		<div class='col-sm-10'>
+			<p class='input-group'>
+				<label class='checkbox-inline'><input type='checkbox' ng-model='isCleared' />abgerechnet</label>
+			</p>
+		</div
+	</div>
 
 	<div class='col-sm-offset-2 col-sm-10'>
 		<input class='btn btn-success bnt-lg btn-block' type='submit' value='Speichern' ng-disabled='comForm.$invalid'>
