--- a/public/templates/myCommitments.html
+++ b/public/templates/myCommitments.html
@@ -23,10 +23,10 @@
 	<div cg-Busy='{promise:busyPromise,message:"Loading",backdrop:true,minDuration:500}'></div>
   <table class='table table-bordered'>
 		<thead>
-			<tr>
+			<tr class="bg-primary" style="background: #ffbb55">
 				<th></th>
 	      <th></th>
-				<th>Nummer</th>
+				<th>Buchungs-Nummer</th>
 				<th>Name</th>
 				<th>Beschreibung</th>
 				<th>Datum</th>
