--- a/public/templates/eventEdit.html
+++ b/public/templates/eventEdit.html
@@ -94,7 +94,7 @@
 		<label for='budgetFood' class='control-label col-sm-2'>Essensbudget</label>
 		<div class='col-sm-10'>
 			<p class='input-group'>
-				<input type='number' ng-model='budgetFood' min='0' step='0.01' required></input>
+				<input type='number' ng-model='budgetFood' step='0.01' required></input>
 			</p>
 		</div>
 	</div>
