ask for a resource

--- a/public/templates/events.html
+++ b/public/templates/events.html
@@ -32,6 +32,7 @@
 					<a href='/#/editEvent/{{event._id}}' class='btn btn-xlarge btn-info' role='button' ng-show='iSvc.isAuthorized("admin")'><span class='glyphicon glyphicon-pencil'></span></a>
 					<a href='/#/newCommitment/{{event._id}}' class='btn btn-xlarge btn-primary' role='button' ng-show='iSvc.isAuthorized("admin") || iSvc.isAuthorizedForEvent("fadmin", event._id)'><span class='glyphicon glyphicon-usd'></span></a>
 					<a href='/#/newTravelExpenses/{{event._id}}' class='btn btn-xlarge btn-primary' role='button' ng-show='iSvc.isAuthorized("admin") || iSvc.isAuthorizedForEvent("fadmin", event._id)'><span class='glyphicon glyphicon-road'></span></a>
+					<a href='/#/newLending/{{event._id}}' class='btn btn-xlarge btn-primary' role='button' ng-show='iSvc.isAuthorized("admin") || iSvc.isAuthorizedForEvent("fadmin", event._id)'><span class='glyphicon glyphicon-paperclip'></span></a>
 				</div>
 			</div>
 		</li>
