--- a/public/templates/resources.html
+++ b/public/templates/resources.html
@@ -1,1 +1,1 @@
-<iframe src="https://calendar.google.com/calendar/embed?src=jnsvp62v6mjus6rnbdtlnk32bk%40group.calendar.google.com&ctz=Europe/Vienna" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+<div>Materialien Übersicht</div>
