--- a/public/templates/resources.html
+++ b/public/templates/resources.html
@@ -1,1 +1,40 @@
-<div>Materialien Übersicht</div>
+<div class="container">
+  <h2 class='text-orange'>{{title}}</h2>
+  <div class="panel panel-default">
+    <div class="panel-heading">Material abfragen</div>
+    <div class="panel-body">
+      <form name='resForm' class='form-horizontal' novalidate ng-submit='search()'>
+      	<!-- DATE -->
+      	<div class='form-group' ng-class='{ "has-error": resForm.date.$invalid }'>
+      		<label for='date' class='control-label col-sm-2'>Datum</label>
+      		<div class='col-sm-10'>
+      		<p class='input-group'>
+      			<ng-datepicker ng-model='date' view-format="DD.MM.YYYY" locale='de' required></ng-datepicker>
+      		</p>
+      		</div>
+      	</div>
+        <!-- ONLY MY LENDINGS -->
+      	<div class='form-group'>
+      		<label for='onlyMy' class='control-label col-sm-2'>Nur eigene Reservierungen</label>
+      		<div class='col-sm-10'>
+      		<p class='input-group'>
+      			<input type='checkbox' ng-model='onlyMy'></input>
+      		</p>
+      		</div>
+      	</div>
+      	<div class='col-sm-offset-2 col-sm-10'>
+      		<input class='btn btn-success bnt-lg btn-block' type='submit' value='Suchen' ng-disabled='resForm.$invalid'>
+      	</div>
+
+      </form>
+    </div>
+  </div>
+  <br>
+  <div class="list-group">
+    <div ng-repeat='lend in lendings' class="list-group-item list-group-item-warning">
+      <span class="glyphicon glyphicon-check" style="margin-right:3px;"></span>
+      <span class="list-group-item-heading"><strong>{{lend.resourceId.name}}</strong></span>
+      <span class="list-group-item-text">{{lend.date | date: 'dd/MM/yyyy'}} {{lend.eventId.location}} - {{lend.eventId.name}}</span>
+    </div>
+</div>
+</div>
