--- a/public/templates/myCommitments.html
+++ b/public/templates/myCommitments.html
@@ -44,7 +44,7 @@
         <th class="bg-warning" ng-show='iSvc.isAuthorized("admin")'><strong>Gesamtbudget:</strong></th>
 				<th class="bg-warning" ng-show='!iSvc.isAuthorized("admin")'></th>
 				<th class="bg-warning" ng-show='!iSvc.isAuthorized("admin")'></th>
-				<th align="right" ng-show='iSvc.isAuthorized("admin")' class="bg-primary" style="text-align: right;"><strong>{{calcBudgetSum(grp)*1}}</strong></th>
+				<th align="right" ng-show='iSvc.isAuthorized("admin")' class="bg-primary" style="text-align: right;"><strong>{{formatDec(calcBudgetSum(grp)*1)}}</strong></th>
 				<th colspan="5" class="bg-warning"></th>
 			</tr>
 			<!-- HEAD BUSINESS -->
@@ -52,7 +52,7 @@
 				<td colspan="2"><button class="btn btn-default glyphicon glyphicon-resize-full" ng-click="toggleVisibility(grp['business'])"></button></td>
 				<td colspan="3" class="bg-warning"><i><strong>Sachkosten</strong></i></td>
         <td class="bg-warning"><strong>Budget:</strong></td>
-				<td align="right" class="bg-primary"><strong>{{grp['business'][0].eventId.budgetBusiness}}</strong></td>
+				<td align="right" class="bg-primary"><strong>{{formatDec(grp['business'][0].eventId.budgetBusiness)}}</strong></td>
 				<td class="bg-warning" colspan="2"><strong>Restbudget:</strong></td>
 				<td align="right" class="bg-warning"><strong>{{formatDec(grp['business'][0].eventId.budgetBusiness - sumGrpAll(grp["business"]))}}</strong></td>
 				<td class="bg-warning"></td>
@@ -66,7 +66,7 @@
 				<td>{{com.name}}</td>
 			  <td>{{com.description}}</td>
 			  <td>{{com.date | date: 'dd/MM/yyyy'}}</td>
-        <td align="right">{{com.amount}}</td>
+        <td align="right">{{formatDec(com.amount)}}</td>
         <td align="center" ng-class='{"bg-info": com.isPaymentDone}'>{{formatBool(com.isPaymentDone)}}</td>
         <td align="center" ng-class='{"bg-info": com.isPaymentJDDone}'>{{formatBool(com.isPaymentJDDone)}}</td>
         <td align="center" ng-class='{"bg-info": com.isInvoice}'>{{formatBool(com.isInvoice)}}</td>
@@ -88,7 +88,7 @@
 				<td colspan="2"><button class="btn btn-default glyphicon glyphicon-resize-full" ng-click="toggleVisibility(grp['food'])"></button></td>
 				<td colspan="3" class="bg-warning"><i><strong>Essenskosten</strong></i></td>
         <td class="bg3warning"><strong>Budget:</strong></td>
-				<td align="right" class="bg-primary"><strong>{{grp['food'][0].eventId.budgetFood}}</strong></td>
+				<td align="right" class="bg-primary"><strong>{{formatDec(grp['food'][0].eventId.budgetFood)}}</strong></td>
 				<td class="bg-warning" colspan="2"><strong>Restbudget	:</strong></td>
 				<td align="right" class="bg-warning"><strong>{{formatDec(grp['food'][0].eventId.budgetFood - sumGrpAll(grp["food"]))}}</strong></td>
 				<td class="bg-warning"></td>
@@ -102,7 +102,7 @@
 				<td>{{com.name}}</td>
 			  <td>{{com.description}}</td>
 			  <td>{{com.date | date: 'dd/MM/yyyy'}}</td>
-        <td align="right">{{com.amount}}</td>
+        <td align="right">{{formatDec(com.amount)}}</td>
         <td align="center" ng-class='{"bg-info": com.isPaymentDone}'>{{formatBool(com.isPaymentDone)}}</td>
         <td align="center" ng-class='{"bg-info": com.isPaymentJDDone}'>{{formatBool(com.isPaymentJDDone)}}</td>
         <td align="center" ng-class='{"bg-info": com.isInvoice}'>{{formatBool(com.isInvoice)}}</td>
@@ -136,7 +136,7 @@
 				<td>{{com.name}}</td>
 			  <td>{{com.description}}</td>
 			  <td>{{com.date | date: 'dd/MM/yyyy'}}</td>
-        <td align="right">{{com.amount}}</td>
+        <td align="right">{{formatDec(com.amount)}}</td>
         <td align="center"></td>
         <td align="center"></td>
         <td align="center"></td>
@@ -147,7 +147,7 @@
 			<tr>
 				<td colspan="2"></td>
 				<td colspan="4"><strong>Summe:</strong></td>
-				<td align="right"><strong>{{sumGrpAll(grp["travel"])}}</strong></td>
+				<td align="right"><strong>{{formatDec(sumGrpAll(grp["travel"]))}}</strong></td>
 				<td align="right"></td>
         <td align="right"></td>
         <td align="right"></td>
@@ -155,7 +155,7 @@
 			</tr>
       <tr>
 				<td colspan="6"><strong>Summe:</strong></td>
-				<td align="right"><strong>{{sumGrpTypes(grp)}}</strong></td>
+				<td align="right"><strong>{{formatDec(sumGrpTypes(grp))}}</strong></td>
 				<td colspan="5"></td>
 			</tr>
 		</tbody>
