--- a/public/templates/events.html
+++ b/public/templates/events.html
@@ -18,7 +18,7 @@
 					<a href='/#/activities/{{event._id}}' role='button'>
 						<span ng-show='event.type === "summer"' class='glyphicon glyphicon-certificate'></span>
 						<span ng-show='event.type === "music"' class='glyphicon glyphicon-music'></span>
-						<span ng-show='event.type === "majority"' class='glyphicon glyphicon-education'></span>
+						<span ng-show='event.type === "spiritnight"' class='glyphicon glyphicon-education'></span>
 					</a>
 				</div>
 				</div>
