--- a/public/templates/eventEdit.html
+++ b/public/templates/eventEdit.html
@@ -24,6 +24,7 @@
 			<select name='type' class='sel-base form-control' ng-model='type'>
 				<option value='summer'>Sommerwoche</option>
 				<option value='music'>Jungbläserwoche</option>
+				<option value='club'>Jugendtreff</option>
 				<option value='spiritnight'>Spiritnight</option>
 			</select>
 		</div>
