--- a/public/templates/events.html
+++ b/public/templates/events.html
@@ -19,6 +19,7 @@
 						<span ng-show='event.type === "summer"' class='glyphicon glyphicon-certificate'></span>
 						<span ng-show='event.type === "music"' class='glyphicon glyphicon-music'></span>
 						<span ng-show='event.type === "spiritnight"' class='glyphicon glyphicon-education'></span>
+						<span ng-show='event.type === "club"' class='glyphicon glyphicon-home'></span>
 					</a>
 				</div>
 				</div>
