--- a/public/templates/myCommitments.html
+++ b/public/templates/myCommitments.html
@@ -35,6 +35,7 @@
 				<th>Bezahlt JD</th>
 				<th>Rechnung JD</th>
 				<th>Benutzer</th>
+				<th>Woche</th>
 				<th>Abgerechnet</th>
 			</tr>
 		</thead>
@@ -45,32 +46,33 @@
 				<th class="bg-warning" ng-show='!iSvc.isAuthorized("admin")'></th>
 				<th class="bg-warning" ng-show='!iSvc.isAuthorized("admin")'></th>
 				<th align="right" ng-show='iSvc.isAuthorized("admin")' class="bg-primary" style="text-align: right;"><strong>{{formatDec(calcBudgetSum(grp)*1)}}</strong></th>
-				<th colspan="5" class="bg-warning"></th>
+				<th colspan="6" class="bg-warning"></th>
 			</tr>
 			<!-- HEAD BUSINESS -->
 			<tr>
 				<td colspan="2"><button class="btn btn-default glyphicon glyphicon-resize-full" ng-click="toggleVisibility(grp['business'])"></button></td>
 				<td colspan="3" class="bg-warning"><i><strong>Sachkosten</strong></i></td>
-        <td class="bg-warning"><strong>Budget:</strong></td>
+        		<td class="bg-warning"><strong>Budget:</strong></td>
 				<td align="right" class="bg-primary"><strong>{{formatDec(grp['business'][0].eventId.budgetBusiness)}}</strong></td>
 				<td class="bg-warning" colspan="2"><strong>Restbudget:</strong></td>
 				<td align="right" class="bg-warning"><strong>{{formatDec(grp['business'][0].eventId.budgetBusiness - sumGrpAll(grp["business"]))}}</strong></td>
-				<td class="bg-warning"></td>
+				<td class="bg-warning" colspan="2"></td>
 				<td align="center" ng-class='{"bg-danger": hasCleared(grp["business"]), "bg-success": !hasCleared(grp["business"])}'>{{formatBool(!hasCleared(grp["business"]))}}</td>
 			</tr>
 			<!-- MAIN BUSINESS -->
 			<tr ng-repeat='com in grp["business"]' ng-class='{"tbl_hide": com.isHidden, "tbl_show": !com.isHidden}'>
 				<td><button class="btn glyphicon glyphicon-pencil" ng-disabled='!iSvc.isAuthorized("fadmin")' type="button" ng-click='editCommitment(com._id)'></button></td>
-  			<td><button type="button" class="btn glyphicon glyphicon-trash" align="center" ng-disabled='!iSvc.isAuthorized("admin")' ng-click='deleteCommitment(com._id)'></button></td>
+	  			<td><button type="button" class="btn glyphicon glyphicon-trash" align="center" ng-disabled='!iSvc.isAuthorized("admin")' ng-click='deleteCommitment(com._id)'></button></td>
 				<td>{{com.index}}</td>
 				<td>{{com.name}}</td>
-			  <td>{{com.description}}</td>
-			  <td>{{com.date | date: 'dd/MM/yyyy'}}</td>
-        <td align="right">{{formatDec(com.amount)}}</td>
-        <td align="center" ng-class='{"bg-info": com.isPaymentDone}'>{{formatBool(com.isPaymentDone)}}</td>
-        <td align="center" ng-class='{"bg-info": com.isPaymentJDDone}'>{{formatBool(com.isPaymentJDDone)}}</td>
-        <td align="center" ng-class='{"bg-info": com.isInvoice}'>{{formatBool(com.isInvoice)}}</td>
+			  	<td>{{com.description}}</td>
+			  	<td>{{com.date | date: 'dd/MM/yyyy'}}</td>
+        		<td align="right">{{formatDec(com.amount)}}</td>
+        		<td align="center" ng-class='{"bg-info": com.isPaymentDone}'>{{formatBool(com.isPaymentDone)}}</td>
+        		<td align="center" ng-class='{"bg-info": com.isPaymentJDDone}'>{{formatBool(com.isPaymentJDDone)}}</td>
+        		<td align="center" ng-class='{"bg-info": com.isInvoice}'>{{formatBool(com.isInvoice)}}</td>
 				<td>{{com.userId.lastName}}</td>
+				<td>{{com.activityId.name}}</td>
 				<td align="center" ng-class='{"bg-success": com.isCleared, "bg-danger": !com.isCleared}'><input ng-show='iSvc.isAuthorized("admin")' type='checkbox' ng-model='com.isCleared' ng-change='updateIsCleared(com._id, com.isCleared)' style='margin-right:8px' />{{formatBool(com.isCleared)}}</td>
 			</tr>
 			<!-- FOOTER BUSINESS -->
@@ -79,19 +81,19 @@
 				<td colspan="4"><strong>Summe:</strong></td>
 				<td align="right" ng-class='{"bg-success": !isOverBudget(grp["business"], "business"), "bg-danger": isOverBudget(grp["business"], "business")}'><strong>{{sumGrpAll(grp["business"])}}</strong></td>
 				<td align="right"><strong>{{sumGrpIsPaymentDone(grp["business"])}}</strong></td>
-        <td align="right"><strong>{{sumGrpIsPaymentJDDone(grp["business"])}}</strong></td>
-        <td align="right"><strong>{{sumGrpIsInvoice(grp["business"])}}</strong></td>
-				<td colspan="2"></td>
+        		<td align="right"><strong>{{sumGrpIsPaymentJDDone(grp["business"])}}</strong></td>
+        		<td align="right"><strong>{{sumGrpIsInvoice(grp["business"])}}</strong></td>
+				<td colspan="3"></td>
 			</tr>
 			<!-- HEADER FOOD -->
 			<tr ng-show='iSvc.isAuthorized("admin")'>
 				<td colspan="2"><button class="btn btn-default glyphicon glyphicon-resize-full" ng-click="toggleVisibility(grp['food'])"></button></td>
 				<td colspan="3" class="bg-warning"><i><strong>Essenskosten</strong></i></td>
-        <td class="bg3warning"><strong>Budget:</strong></td>
+        		<td class="bg3warning"><strong>Budget:</strong></td>
 				<td align="right" class="bg-primary"><strong>{{formatDec(grp['food'][0].eventId.budgetFood)}}</strong></td>
 				<td class="bg-warning" colspan="2"><strong>Restbudget	:</strong></td>
 				<td align="right" class="bg-warning"><strong>{{formatDec(grp['food'][0].eventId.budgetFood - sumGrpAll(grp["food"]))}}</strong></td>
-				<td class="bg-warning"></td>
+				<td class="bg-warning" colspan="2"></td>
 				<td align="center" ng-class='{"bg-danger": hasCleared(grp["food"]), "bg-success": !hasCleared(grp["food"])}'>{{formatBool(!hasCleared(grp["food"]))}}</td>
 			</tr>
 			<!-- MAIN FOOD -->
@@ -100,13 +102,14 @@
   			<td><button type="button" class="btn glyphicon glyphicon-trash" ng-disabled='!iSvc.isAuthorized("admin")' ng-click='deleteCommitment(com._id)'></button></td>
 				<td>{{com.index}}</td>
 				<td>{{com.name}}</td>
-			  <td>{{com.description}}</td>
-			  <td>{{com.date | date: 'dd/MM/yyyy'}}</td>
-        <td align="right">{{formatDec(com.amount)}}</td>
-        <td align="center" ng-class='{"bg-info": com.isPaymentDone}'>{{formatBool(com.isPaymentDone)}}</td>
-        <td align="center" ng-class='{"bg-info": com.isPaymentJDDone}'>{{formatBool(com.isPaymentJDDone)}}</td>
-        <td align="center" ng-class='{"bg-info": com.isInvoice}'>{{formatBool(com.isInvoice)}}</td>
+			  	<td>{{com.description}}</td>
+			  	<td>{{com.date | date: 'dd/MM/yyyy'}}</td>
+        		<td align="right">{{formatDec(com.amount)}}</td>
+        		<td align="center" ng-class='{"bg-info": com.isPaymentDone}'>{{formatBool(com.isPaymentDone)}}</td>
+        		<td align="center" ng-class='{"bg-info": com.isPaymentJDDone}'>{{formatBool(com.isPaymentJDDone)}}</td>
+        		<td align="center" ng-class='{"bg-info": com.isInvoice}'>{{formatBool(com.isInvoice)}}</td>
 				<td>{{com.userId.lastName}}</td>
+				<td>{{com.activityId.name}}</td>
 				<td align="center" ng-class='{"bg-success": com.isCleared, "bg-danger": !com.isCleared}'><input ng-show='iSvc.isAuthorized("admin")' type='checkbox' ng-model='com.isCleared' ng-change='updateIsCleared(com._id, com.isCleared)' style='margin-right:8px' />{{formatBool(com.isCleared)}}</td>
 			</tr>
       <!-- FOOTER FOOD -->
@@ -115,32 +118,33 @@
 				<td colspan="4"><strong>Summe:</strong></td>
 				<td align="right" ng-class='{"bg-success": !isOverBudget(grp["food"], "food"), "bg-danger": isOverBudget(grp["food"], "food")}'><strong>{{sumGrpAll(grp["food"])}}</strong></td>
 				<td align="right"><strong>{{sumGrpIsPaymentDone(grp["food"])}}</strong></td>
-        <td align="right"><strong>{{sumGrpIsPaymentJDDone(grp["food"])}}</strong></td>
-        <td align="right"><strong>{{sumGrpIsInvoice(grp["food"])}}</strong></td>
-				<td colspan="2"></td>
+        		<td align="right"><strong>{{sumGrpIsPaymentJDDone(grp["food"])}}</strong></td>
+        		<td align="right"><strong>{{sumGrpIsInvoice(grp["food"])}}</strong></td>
+				<td colspan="3"></td>
 			</tr>
       <!-- HEAD TRAVEL -->
 			<tr>
 				<td colspan="2"><button class="btn btn-default glyphicon glyphicon-resize-full" ng-click="toggleVisibility(grp['travel'])"></button></td>
 				<td colspan="3" class="bg-warning"><i><strong>Fahrtkosten</strong></i></td>
-        <td class="bg-warning"></td>
+        		<td class="bg-warning"></td>
 				<td align="right" class="bg-primary"></td>
-				<td colspan="4" class="bg-warning"></td>
+				<td colspan="5" class="bg-warning"></td>
 				<td align="center" ng-class='{"bg-danger": hasCleared(grp["travel"]), "bg-success": !hasCleared(grp["travel"])}'>{{formatBool(!hasCleared(grp["travel"]))}}</td>
 			</tr>
 			<!-- MAIN TRAVEL -->
 			<tr ng-repeat='com in grp["travel"]' ng-class='{"tbl_hide": com.isHidden, "tbl_show": !com.isHidden}'>
 				<td><button class="btn glyphicon glyphicon-pencil" ng-disabled='!iSvc.isAuthorized("fadmin")' type="button" ng-click='editTravelExpenses(com._id)'></button></td>
-  			<td><button type="button" class="btn glyphicon glyphicon-trash" ng-disabled='!iSvc.isAuthorized("admin")' ng-click='deleteCommitment(com._id)'></button></td>
+  				<td><button type="button" class="btn glyphicon glyphicon-trash" ng-disabled='!iSvc.isAuthorized("admin")' ng-click='deleteCommitment(com._id)'></button></td>
 				<td>{{com.index}}</td>
 				<td>{{com.name}}</td>
-			  <td>{{com.description}}</td>
-			  <td>{{com.date | date: 'dd/MM/yyyy'}}</td>
-        <td align="right">{{formatDec(com.amount)}}</td>
-        <td align="center"></td>
-        <td align="center"></td>
-        <td align="center"></td>
+			  	<td>{{com.description}}</td>
+			  	<td>{{com.date | date: 'dd/MM/yyyy'}}</td>
+        		<td align="right">{{formatDec(com.amount)}}</td>
+        		<td align="center"></td>
+        		<td align="center"></td>
+        		<td align="center"></td>
 				<td>{{com.userId.lastName}}</td>
+				<td></td>
                 <td align="center" ng-class='{"bg-success": com.isCleared, "bg-danger": !com.isCleared}'><input ng-show='iSvc.isAuthorized("admin")' type='checkbox' ng-model='com.isCleared' ng-change='updateIsCleared(com._id, com.isCleared)' style='margin-right:8px' />{{formatBool(com.isCleared)}}</td>
 			</tr>
 			<!-- FOOTER TRAVEL -->
@@ -149,14 +153,14 @@
 				<td colspan="4"><strong>Summe:</strong></td>
 				<td align="right"><strong>{{formatDec(sumGrpAll(grp["travel"]))}}</strong></td>
 				<td align="right"></td>
-        <td align="right"></td>
-        <td align="right"></td>
-				<td colspan="2"></td>
+        		<td align="right"></td>
+        		<td align="right"></td>
+				<td colspan="3"></td>
 			</tr>
-      <tr>
+      		<tr>
 				<td colspan="6"><strong>Summe:</strong></td>
 				<td align="right"><strong>{{formatDec(sumGrpTypes(grp))}}</strong></td>
-				<td colspan="5"></td>
+				<td colspan="6"></td>
 			</tr>
 		</tbody>
 		<!--<tfoot>
