--- a/public/templates/registrationEdit.html
+++ b/public/templates/registrationEdit.html
@@ -77,6 +77,22 @@
 			<textarea name='healthChild' ng-model='healthChild' rows='3' maxlength='350' class='form-control'></textarea>
 		</div>
 	</div>
+	<!-- ADDRESSCHILD -->
+	<div class='form-group' ng-class='{ "has-error": registrationForm.addressChild.$invalid }'>
+		<label for='addressChild' class='control-label col-sm-2'>Adresse</label>
+		<div class='col-sm-10'>
+			<input name='addressChild' type='text' ng-model='addressChild' required maxlength='100' class='form-control'></input>
+		</div>
+	</div>
+	<!-- CITYCHILD -->
+	<div class='form-group' ng-class='{ "has-error": registrationForm.cityChild.$invalid }'>
+		<label for='cityChild' class='control-label col-sm-2'>Wohnort</label>
+		<div class='col-sm-10'>
+			<select name='cityChild' class='sel-base form-control' ng-model='cityChild'>
+				<option ng-repeat="city in cities" value='{{city}}'>{{city}}</option>
+			</select>
+		</div>
+	</div>
 	<div class="panel panel-default">
 	<div class="panel-heading text-orange"><strong>Auszufüllen nur bei Anmeldung für die Tschögglberger Jungbläserwochen</strong></div>
   <div class="panel-body">
