enhance registration form

--- a/public/templates/registration.html
+++ b/public/templates/registration.html
@@ -89,6 +89,11 @@
 			</select>
 		</div>
 	</div>
+	<!-- NEEDSPRECARE -->
+	<div class='col-sm-offset-2 col-sm4'>
+		<input type='checkbox' name='needsPreCare' ng-model='needsPreCare'><strong>  Betreuung von 08:00-09:00 (15 EUR)</input>
+	</div>
+	<br />
 	<div ng-show='type === "music"' class="panel panel-default">
 	<!-- JUNGBLÄSERWOCHE -->
   <div ng-show='type == "music"' class="panel-heading text-orange"><strong>Auszufüllen nur bei Anmeldung für die Tschögglberger Jungbläserwochen</strong></div>
