--- a/public/templates/registrationEdit.html
+++ b/public/templates/registrationEdit.html
@@ -93,6 +93,11 @@
 			</select>
 		</div>
 	</div>
+	<!-- NEEDSPRECARE -->
+	<div class='col-sm-offset-2 col-sm4'>
+		<input type='checkbox' name='needsPreCare' ng-model='needsPreCare'><strong>  Betreuung von 08:00-09:00 (15 EUR)</input>
+	</div>
+	<br />
 	<div class="panel panel-default">
 	<div class="panel-heading text-orange"><strong>Auszufüllen nur bei Anmeldung für die Tschögglberger Jungbläserwochen</strong></div>
   <div class="panel-body">
