--- a/public/templates/registration.html
+++ b/public/templates/registration.html
@@ -82,7 +82,7 @@
 	</div>
 	<!-- CITYCHILD -->
 	<div class='form-group' ng-class='{ "has-error": registrationForm.cityChild.$invalid }'>
-		<label for='cityChild' class='control-label col-sm-2'>Wohnort</label>
+		<label for='cityChild' class='control-label col-sm-2'>Gemeinde</label>
 		<div class='col-sm-10'>
 			<select name='cityChild' class='sel-base form-control' ng-model='cityChild'>
 				<option ng-repeat="city in cities" value='{{city}}'>{{city}}</option>
@@ -90,8 +90,8 @@
 		</div>
 	</div>
 	<!-- NEEDSPRECARE -->
-	<div class='col-sm-offset-2 col-sm4'>
-		<input type='checkbox' name='needsPreCare' ng-model='needsPreCare'><strong>  Betreuung von 08:00-09:00 (15 EUR)</input>
+	<div ng-show='type == "summer"' class='col-sm-offset-2 col-sm4'>
+		<input type='checkbox' name='needsPreCare' ng-model='needsPreCare'><strong>  Ich wünsche eine Beaufsichtigung meines Kindes von 08.00 - 09.00 Uhr (+15 Euro die Woche)</input>
 	</div>
 	<br />
 	<div ng-show='type === "music"' class="panel panel-default">
