--- a/public/templates/registrationEdit.html
+++ b/public/templates/registrationEdit.html
@@ -86,7 +86,7 @@
 	</div>
 	<!-- CITYCHILD -->
 	<div class='form-group' ng-class='{ "has-error": registrationForm.cityChild.$invalid }'>
-		<label for='cityChild' class='control-label col-sm-2'>Wohnort</label>
+		<label for='cityChild' class='control-label col-sm-2'>Gemeinde</label>
 		<div class='col-sm-10'>
 			<select name='cityChild' class='sel-base form-control' ng-model='cityChild'>
 				<option ng-repeat="city in cities" value='{{city}}'>{{city}}</option>
