--- a/public/templates/report.html
+++ b/public/templates/report.html
@@ -66,7 +66,7 @@
 			<th>Schulstufe</th>
 			<th>Gesundheit</th>
 			<th>Adresse</th>
-			<th>Ort</th>
+			<th>Wohnort</th>
 			<th>Vorname Eltern</th>
 			<th>Nachname Eltern</th>
 			<th>Email Eltern</th>
