--- a/public/templates/activities.html
+++ b/public/templates/activities.html
@@ -36,8 +36,8 @@
 				</div>
 				<div class'col-sm-1'>
 					<a href='/#/editActivity/{{activity._id}}' class='btn btn-xlarge btn-info' role='button' ng-show='iSvc.isAuthorized("admin")'><span class='glyphicon glyphicon-pencil'></span></a>
-					<a href='/#/registration/{{activity._id}}' class='btn btn-xlarge btn-success' role='button' ng-show='iSvc.isAuthenticated() && !canNotReserve(activity)'><span class='glyphicon glyphicon-new-window'></span></a>
-					<button type="button" class="btn btn-xlarge btn-success" ng-hide='iSvc.isAuthenticated() && !canNotReserve(activity)' data-toggle="modal" data-target="#warningModal"><span class='glyphicon glyphicon-new-window'></button>
+					<a href='/#/registration/{{activity._id}}' class='btn btn-xlarge btn-success' role='button' ng-show='iSvc.isAuthenticated() && !canNotReserve(activity)'><span class='glyphicon glyphicon-user'></span></a>
+					<button type="button" class="btn btn-xlarge btn-success" ng-hide='iSvc.isAuthenticated() && !canNotReserve(activity)' data-toggle="modal" data-target="#warningModal"><span class='glyphicon glyphicon-user'></button>
 				</div>
 			</div>
 		</li>
