selection based on type/location

--- a/public/templates/selection.html
+++ b/public/templates/selection.html
@@ -5,7 +5,7 @@
     <div class='card-orange'>
         <a class='invisible-link' href='#/events/{{loc._id}}'>
         <div class='panel-header'>
-                <h3><strong>{{loc._id}}</strong>
+                <h3><strong>{{loc.name}}</strong>
                 <h5>Programme: <span class='badge bg-darkorange'>{{loc.countEvents}}</span></h5></h3>
                 <hr />
         </div>
